Code Clean up and fixes. Trying HTML Include on navBar.html in index.html.

--- a/src/ContactUs.html
+++ b/src/ContactUs.html
@@ -108,12 +108,12 @@
             </ul>
           </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <div class="nav navbar-nav navbar-right">
           <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
           <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
           <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
           <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
-        </ul>
+        </div>
       </div>
     </nav>
     
@@ -129,10 +129,10 @@
   </div>
 
   <!--<div id="left">
-  </div> <!-- end of left -->
+  </div> end of left -->
 
   <!-- <div id="right">
-  </div> <!-- end of right -->
+  </div> end of right -->
 
   <div id="centerContactUs">
   
@@ -475,12 +475,13 @@
 
   <h1 id="links" style="text-align: center">Links</h1>
     <p style="font-size:18px; text-align: center; margin: 0px;">Other Tracks and Clubs</p>
+    <ul>
       <li style="font-size:14px; text-align: center; list-style-type: none;"><a href="http://www.albernidragracing.com/" target="_blank">Alberni Valley Drag Racing</a></li>
       <li style="font-size:14px; text-align: center; list-style-type: none;"><a href="http://www.missionraceway.com/" target="_blank">Mission Raceway Park</a></li>
       <li style="font-size:14px; text-align: center; list-style-type: none;"><a href="http://www.northislandtimingassociation.com/" target="_blank">North Island Timing Association</a></li>
       <li style="font-size:14px; text-align: center; list-style-type: none;"><a href="http://www.saratogaspeedway.bc.ca/" target="_blank">Saratoga Speedway</a></li>
       <li style="font-size:14px; text-align: center; list-style-type: none;"><a href="http://www.westernspeedway.net/" target="_blank">Western Speedway</a></li>
-      
+    </ul>
   <br>
 
   </div> <!-- end of center -->
