--- a/src/index.html
+++ b/src/index.html
@@ -39,23 +39,23 @@
   <div id="header">
 
     <div id="mySlidesDiv">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-2.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-3.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-4.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-5.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-6.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-7.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-8.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-9.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-10.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-11.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-12.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-13.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-14.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-15.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-16.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-17.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-18.jpg">
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-2.jpg" alt="Slide2" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-3.jpg" alt="Slide3" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-4.jpg" alt="Slide4" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-5.jpg" alt="Slide5" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-6.jpg" alt="Slide6" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-7.jpg" alt="Slide7" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-8.jpg" alt="Slide8" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-9.jpg" alt="Slide9" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-10.jpg" alt="Slide10" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-11.jpg" alt="Slide11" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-12.jpg" alt="Slide12" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-13.jpg" alt="Slide13" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-14.jpg" alt="Slide14" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-15.jpg" alt="Slide15" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-16.jpg" alt="Slide16" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-17.jpg" alt="Slide17" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-18.jpg" alt="Slide18" />
     </div>
     
     <span id="shade"></span>
@@ -95,50 +95,7 @@
       </tr>
     </table>
 
-    <nav class="navbar navbar-inverse navbar-topMargin">
-      <div class="container-fluid">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
-          <li class="dropdown"><a href="/RacerInfo.html">Racer Info <span class="caret"></span></a> <!-- & General  -->
-            <ul class="dropdown-menu">
-              <li><a href="/RacerInfo.html#Fees">Fees</a></li>
-              <li><a href="/RacerInfo.html#Memberships">Memberships</a></li>
-              <li><a href="/RacerInfo.html#DriverInformationSheet">Driver Information Sheet</a></li>
-              <li><a href="/RacerInfo.html#RaceClassesAndTimes">Classes & Times</a></li>
-              <li><a href="/RacerInfo.html#BracketRacingBasics">Racing Basics</a></li>
-              <li><a href="/RacerInfo.html#OutSideTrackLineUp">Track Line Up</a></li>
-              <li><a href="/RacerInfo.html#Tech.Inspection">Tech. Inspection</a></li> 
-              <li><a href="/RacerInfo.html#TheTrack">The Track</a></li> 
-              <li><a href="/RacerInfo.html#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
-              <li><a href="/RacerInfo.html#Disqualifications">Disqualifications</a></li> 
-              <li><a href="/RacerInfo.html#Tree">Tree</a></li>
-            </ul>
-          </li>
-          <li><a href="/Points.html">Points</a></li>
-          <li class="dropdown"><a href="/Events.html">Events <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="/Events.html#RaceSchedule">Race Schedule</a></li>
-              <li><a href="/Events.html#Posters">Posters</a></li>
-            </ul>
-          </li>
-          <li><a href="/Sponsors.html">Sponsors</a></li>
-          <li><a href="/ContactUs.html">Contact Us</a></li>
-          <li><a href="/AboutUs.html">About Us</a></li>
-          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
-              <li><a href="/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
-            </ul>
-          </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
-          <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
-          <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
-          <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
-        </ul>
-      </div>
-    </nav>
+    <div w3-include-html="navBar.html"></div> <!-- Test -->
 
   </div>  <!-- end of header-->
   
@@ -195,14 +152,14 @@
     <h3 style="text-align: center;">Congratulations to all Racers.</h3>
 
     <h2 id="pro">Pro Class</h2>
-    <ol id="indexPointsList">
+    <ol class="indexPointsList">
       <li>#6011 Bill Nesbitt &nbsp;&nbsp;- 5827 Points.</li>
       <li>#B408 Blake Miller - 4721 Points.</li>
       <li>#263 Bill Jamieson - 4420 Points.</li>
     </ol>
 
     <h2 id="street">Street Class</h2>
-    <ol id="indexPointsList">
+    <ol class="indexPointsList">
       <li>#26 Rob Baxter &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 5626 Points.</li>
       <li>#50 Clint Neargarth &nbsp;&nbsp;&nbsp;&nbsp;- 5021 Points.</li>
       <li>#55 Jason Hutchinson - 4116 Points.</li>
