--- a/src/navBar.html
+++ b/src/navBar.html
@@ -1,43 +1,44 @@
-<nav class="navbar navbar-inverse navbar-topMargin">
-  <div class="container-fluid">
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
-      <li class="dropdown"><a href="/RacerInfo.html">Racer Info <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="/RacerInfo.html#Fees">Fees</a></li>
-          <li><a href="/RacerInfo.html#DriverInformationSheet">Driver Information Sheet</a></li>
-          <li><a href="/RacerInfo.html#RaceClassesAndTimes">Classes & Times</a></li>
-          <li><a href="/RacerInfo.html#BracketRacingBasics">Racing Basics</a></li>
-          <li><a href="/RacerInfo.html#OutSideTrackLineUp">Track Line Up</a></li>
-          <li><a href="/RacerInfo.html#Tech.Inspection">Tech. Inspection</a></li> 
-          <li><a href="/RacerInfo.html#TheTrack">The Track</a></li> 
-          <li><a href="/RacerInfo.html#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
-          <li><a href="/RacerInfo.html#Disqualifications">Disqualifications</a></li> 
-          <li><a href="/RacerInfo.html#Tree">Tree</a></li>
+    <nav class="navbar navbar-inverse navbar-topMargin">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
+          <li class="dropdown"><a href="/RacerInfo.html">Racer Info <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/RacerInfo.html#Fees">Fees</a></li>
+              <li><a href="/RacerInfo.html#Memberships">Memberships</a></li>
+              <li><a href="/RacerInfo.html#DriverInformationSheet">Driver Information Sheet</a></li>
+              <li><a href="/RacerInfo.html#RaceClassesAndTimes">Classes & Times</a></li>
+              <li><a href="/RacerInfo.html#BracketRacingBasics">Racing Basics</a></li>
+              <li><a href="/RacerInfo.html#OutSideTrackLineUp">Track Line Up</a></li>
+              <li><a href="/RacerInfo.html#Tech.Inspection">Tech. Inspection</a></li> 
+              <li><a href="/RacerInfo.html#TheTrack">The Track</a></li> 
+              <li><a href="/RacerInfo.html#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
+              <li><a href="/RacerInfo.html#Disqualifications">Disqualifications</a></li> 
+              <li><a href="/RacerInfo.html#Tree">Tree</a></li>
+            </ul>
+          </li>
+          <li><a href="/Points.html">Points</a></li>
+          <li class="dropdown"><a href="/Events.html">Events <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/Events.html#RaceSchedule">Race Schedule</a></li>
+              <li><a href="/Events.html#Posters">Posters</a></li>
+            </ul>
+          </li>
+          <li><a href="/Sponsors.html">Sponsors</a></li>
+          <li><a href="/ContactUs.html">Contact Us</a></li>
+          <li><a href="/AboutUs.html">About Us</a></li>
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
+              <li><a href="/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
+            </ul>
+          </li>
         </ul>
-      </li>
-      <li><a href="/Points.html">Points</a></li>
-      <li class="dropdown"><a href="/Events.html">Events <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="/Events.html#RaceSchedule">Race Schedule</a></li>
-          <li><a href="/Events.html#Posters">Posters</a></li>
-        </ul>
-      </li>
-      <li><a href="/Sponsors.html">Sponsors</a></li>
-      <li><a href="/ContactUs.html">Contact Us</a></li>
-      <li><a href="/AboutUs.html">About Us</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
-          <li><a href="/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
-        </ul>
-      </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
-      <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
-      <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
-      <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
-    </ul>
-  </div>
-</nav>
+        <div class="nav navbar-nav navbar-right">
+          <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
+          <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
+          <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
+          <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
+        </div>
+      </div>
+    </nav>
