--- a/src/404.html
+++ b/src/404.html
@@ -38,9 +38,9 @@
   <div id="header">
 
     <div id="mySlidesDiv">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-2.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-3.jpg">
-      <img class="mySlides" src="/SISLRA/Slides/Untitled-4.jpg">
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-2.jpg" alt="Slide2" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-3.jpg" alt="Slide3" />
+      <img class="mySlides" src="/SISLRA/Slides/Untitled-4.jpg" alt="Slide4" />
     </div>
     
     <span id="shade"></span>
@@ -116,12 +116,12 @@
             </ul>
           </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <div class="nav navbar-nav navbar-right">
           <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
           <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
           <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
           <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
-        </ul>
+        </div>
       </div>
     </nav>
   </div> <!-- end of header-->
