--- a/src/Events.html
+++ b/src/Events.html
@@ -109,12 +109,12 @@
             </ul>
           </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <div class="nav navbar-nav navbar-right">
           <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
           <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
           <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
           <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
-        </ul>
+        </div>
       </div>
     </nav>
     
@@ -140,11 +140,11 @@
           <li><a href="#MeetingsAndMinutes">Meetings And Minutes</a></li>
         </ul>
       </div>
-    </div> -->
-  <!-- </div>  <!-- end of left -->
+    </div>
+  </div> end of left -->
 
   <!-- <div id="right">
-  </div> <!-- end of right -->
+  </div> end of right -->
    
   <div id="center">
 
@@ -221,7 +221,7 @@
     </div>
     
     <script src="/JavaScript/YearPosterModal.js"></script> <!-- Has To Be Here To Run Modal -->
-    <!-- <script src="/JavaScript/StreetCarShootoutModal.js"></script> <!-- Has To Be Here To Run Modal -->
+    <!-- <script src="/JavaScript/StreetCarShootoutModal.js"></script> Has To Be Here To Run Modal -->
 
     <br>
     <br>
