--- a/src/Sponsors.html
+++ b/src/Sponsors.html
@@ -108,12 +108,12 @@
             </ul>
           </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <div class="nav navbar-nav navbar-right">
           <a href="https://www.facebook.com/groups/327092727329942/" target="_blank" class="btn btn-primary" role="button" data-toggle="tooltip" data-placement="bottom" title="Facebook" style="color: #FFF;  margin-top: 4%;"><span class="social social-facebook"></span></a>
           <a href="https://twitter.com/DragRaceVic" target="_blank" class="btn btn-info" role="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" style="color: #FFF;  margin-top: 4%;"><span class="social social-twitter"></span></a>
           <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank" class="btn btn-default" role="button" data-toggle="tooltip" data-placement="bottom" title="Instagram" style="color: #000;  margin-top: 4%;"><span class="social social-instagram"></span></a>
           <a href="https://www.youtube.com/user/nostopinLucR" target="_blank" class="btn btn-danger" role="button" data-toggle="tooltip" data-placement="bottom" title="YouTube" style="color: #FFF; margin-top: 4%;"><span class="social social-youtube"></span></a>          &nbsp;
-        </ul>
+        </div>
       </div>
     </nav>
     
@@ -150,37 +150,37 @@
     </div>  <!-- end of left -->
 
   <!-- <div id="right">
-  </div> <!-- end of right -->
+  </div> end of right -->
 
   <div id="centerSponsors">
 
   <h1>2016 Lane Sponsors</h1>
 
-  <table id="tableCenterSponsors" cellpadding="0px">
+  <table id="tableCenterSponsors">
     <tr>
-      <td align="center"><h3>Tower Lane Sponsored by:</h3></td>
+      <td style="text-align: center;"><h3>Tower Lane Sponsored by:</h3></td>
       <td>&nbsp;</td>
-      <td align="center"><h3>Pit Lane Sponsored by:</h3></td>
+      <td style="text-align: center;"><h3>Pit Lane Sponsored by:</h3></td>
     </tr>
     <tr>
       <td>
         <a href="http://bdlifttruck.ca/" target="_blank"><img id="BandDForklift" src="/Sponsors/BandDForklift-300x87.jpg" alt="TowerLaneSponsor" width="300" height="150"></a>
       </td>
         <td>
-          <img src="/SISLRA/ChristmasTree.png" alt="Christmas Tree" width="200px" style="margin-left:50px; margin-right:50px;"/>
+          <img src="/SISLRA/ChristmasTree.png" alt="Christmas Tree" width="200" style="margin-left:50px; margin-right:50px;"/>
         </td>
       <td>
         <a href="http://searlesauto.ca/" target="_blank"><img id="Searles" src="/Sponsors/Searles.jpg" alt="PitLaneSponsor" width="380"/></a>
       </td>
     </tr>
     <tr>
-      <td align="center">
+      <td style="text-align: center;">
           <p style="margin-top: -60px;">Celebrating 30 Years of Service; B&D Lift Truck Service Ltd. has been serving the forklift needs of Vancouver Island businesses' since 1984.
             They provide sales, rental, service and maintenance, and operator training. 100% family owned and operated, B&D Lift Truck Service Ltd. is 
             the Island's forklift specialist. Contact them at <a href="http://bdlifttruck.ca/" target="_blank">bdlifttruck.ca</a></p>
       </td>
       <td>&nbsp;</td>
-      <td align="center">
+      <td style="text-align: center;">
         <p style="margin-top: -5px;">In operation in since 1979, Searle's, is known by many for its quality work and honesty.
           With well trained mechanics, quality parts, and cutting edge diagnostics, they work on any make
           or model, specializing in Air Conditioning. Searle's Auto Repair is a member of the Better Business
@@ -211,7 +211,7 @@
     and a complete line of garage equipment and professional tools.  As Lordco strives to provide their valued customers with the
     highest level of service possible, visit them for your automotive needs. Visit them at <a href="http://www.lordco.com/" target="_blank">www.lordco.com</a></p>
   
-  <a href="http://www.used.ca/" target="_blank"><img id='Used.ca' src="/Sponsors/Used_Logo_Purple.png" alt="Used_Logo_Purple" width="50%"/></a>
+  <a href="http://www.used.ca/" target="_blank"><img id='Used.ca' src="/Sponsors/Used_Logo_Purple.png" alt="Used_Logo_Purple" width="300"/></a>
   <p>Canadian-owned and operated, Used.ca connects communities to the sharing economy in a fun, safe and family-friendly way. Founded in 2003 through
   a desire to reduce the amount of discarded, but still useful, items that were reaching landfills, Used.ca encourages users to #ThinkUsedFirst.
   Used.ca is dedicated to supporting local communities through the <a href="http://www.used.ca/community/usedhelps/" target="_blank">#UsedHelps</a> initiative. Users can donate the proceeds of their sales directly to participating registered Canadian charities.
