removed .html from URL except for points.html and Sponsors.html because of server problems. Moved folders RacersInfo, YearSponsor, RacePoints, Events and favicon to SISLRA. Renamed Points folder to RacePoints and Sponsors to YearSponsors.

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -50,7 +50,7 @@
     <table id="tableHeader">
       <tr>
         <td>
-          <h3><a href="/Events.html#RaceSchedule"><span class="sislraDate"></span></a></h3>
+          <h3><a href="/Events#RaceSchedule"><span class="sislraDate"></span></a></h3>
         </td>
         <td>
           <h3><a href="http://www.northislandtimingassociation.com/" target="_blank"><span class="RumbleOnTheRunwayDate"></span></a></h3>
@@ -76,26 +76,26 @@
       <div class="container-fluid">
         <ul class="nav navbar-nav">
           <li><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
-          <li class="dropdown"><a href="/RacerInfo.html">Racer Info <span class="caret"></span></a>
+          <li class="dropdown"><a href="/RacerInfo">Racer Info <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/RacerInfo.html#Fees">Fees</a></li>
-              <li><a href="/RacerInfo.html#Memberships">Memberships</a></li>
-              <li><a href="/RacerInfo.html#DriverInformationSheet">Driver Information Sheet</a></li>
-              <li><a href="/RacerInfo.html#RaceClassesAndTimes">Classes & Times</a></li>
-              <li><a href="/RacerInfo.html#BracketRacingBasics">Racing Basics</a></li>
-              <li><a href="/RacerInfo.html#OutSideTrackLineUp">Track Line Up</a></li>
-              <li><a href="/RacerInfo.html#Tech.Inspection">Tech. Inspection</a></li> 
-              <li><a href="/RacerInfo.html#TheTrack">The Track</a></li> 
-              <li><a href="/RacerInfo.html#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
-              <li><a href="/RacerInfo.html#Disqualifications">Disqualifications</a></li> 
-              <li><a href="/RacerInfo.html#Tree">Tree</a></li>
+              <li><a href="/RacerInfo#Fees">Fees</a></li>
+              <li><a href="/RacerInfo#Memberships">Memberships</a></li>
+              <li><a href="/RacerInfo#DriverInformationSheet">Driver Information Sheet</a></li>
+              <li><a href="/RacerInfo#RaceClassesAndTimes">Classes & Times</a></li>
+              <li><a href="/RacerInfo#BracketRacingBasics">Racing Basics</a></li>
+              <li><a href="/RacerInfo#OutSideTrackLineUp">Track Line Up</a></li>
+              <li><a href="/RacerInfo#Tech.Inspection">Tech. Inspection</a></li> 
+              <li><a href="/RacerInfo#TheTrack">The Track</a></li> 
+              <li><a href="/RacerInfo#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
+              <li><a href="/RacerInfo#Disqualifications">Disqualifications</a></li> 
+              <li><a href="/RacerInfo#Tree">Tree</a></li>
             </ul>
           </li>
           <li><a href="/Points.html">Points</a></li>
-          <li class="dropdown"><a href="/Events.html">Events <span class="caret"></span></a>
+          <li class="dropdown"><a href="/Events">Events <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/Events.html#RaceSchedule">Race Schedule</a></li>
-              <li><a href="/Events.html#Posters">Posters</a></li>
+              <li><a href="/Events#RaceSchedule">Race Schedule</a></li>
+              <li><a href="/Events#Posters">Posters</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="/Sponsors.html">Sponsors <span class="caret"></span></a>
@@ -113,22 +113,22 @@
               <li><a href="/Sponsors.html#SponsorshipInformation">Sponsorship Info.</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="/ContactUs.html">Contact Us <span class="caret"></span></a>
+          <li class="dropdown"><a href="/ContactUs">Contact Us <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/ContactUs.html">Contact Us</a></li>
-              <li><a href="/ContactUs.html#links">Other Tracks and Clubs</a></li>
+              <li><a href="/ContactUs">Contact Us</a></li>
+              <li><a href="/ContactUs#links">Other Tracks and Clubs</a></li>
             </ul>
           </li>
-          <li class="dropdown active"><a href="/AboutUs.html">About Us <span class="caret"></span></a>
+          <li class="dropdown active"><a href="/AboutUs">About Us <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/AboutUs.html">About Us</a></li>
-              <li><a href="/AboutUs.html#LOCATEDAT">Location</a></li>
+              <li><a href="/AboutUs">About Us</a></li>
+              <li><a href="/AboutUs#LOCATEDAT">Location</a></li>
             </ul>
           </li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
-              <li><a href="/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
+              <li><a href="/SISLRA/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
+              <li><a href="/SISLRA/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
             </ul>
           </li>
         </ul>
