--- a/src/Sponsors.html
+++ b/src/Sponsors.html
@@ -50,7 +50,7 @@
     <table id="tableHeader">
       <tr>
         <td>
-          <h3><a href="/Events.html#RaceSchedule"><span class="sislraDate"></span></a></h3>
+          <h3><a href="/Events#RaceSchedule"><span class="sislraDate"></span></a></h3>
         </td>
         <td>
           <h3><a href="http://www.northislandtimingassociation.com/" target="_blank"><span class="RumbleOnTheRunwayDate"></span></a></h3>
@@ -76,26 +76,26 @@
       <div class="container-fluid">
         <ul class="nav navbar-nav">
           <li><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
-          <li class="dropdown"><a href="/RacerInfo.html">Racer Info <span class="caret"></span></a>
+          <li class="dropdown"><a href="/RacerInfo">Racer Info <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/RacerInfo.html#Fees">Fees</a></li>
-              <li><a href="/RacerInfo.html#Memberships">Memberships</a></li>
-              <li><a href="/RacerInfo.html#DriverInformationSheet">Driver Information Sheet</a></li>
-              <li><a href="/RacerInfo.html#RaceClassesAndTimes">Classes & Times</a></li>
-              <li><a href="/RacerInfo.html#BracketRacingBasics">Racing Basics</a></li>
-              <li><a href="/RacerInfo.html#OutSideTrackLineUp">Track Line Up</a></li>
-              <li><a href="/RacerInfo.html#Tech.Inspection">Tech. Inspection</a></li> 
-              <li><a href="/RacerInfo.html#TheTrack">The Track</a></li> 
-              <li><a href="/RacerInfo.html#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
-              <li><a href="/RacerInfo.html#Disqualifications">Disqualifications</a></li> 
-              <li><a href="/RacerInfo.html#Tree">Tree</a></li>
+              <li><a href="/RacerInfo#Fees">Fees</a></li>
+              <li><a href="/RacerInfo#Memberships">Memberships</a></li>
+              <li><a href="/RacerInfo#DriverInformationSheet">Driver Information Sheet</a></li>
+              <li><a href="/RacerInfo#RaceClassesAndTimes">Classes & Times</a></li>
+              <li><a href="/RacerInfo#BracketRacingBasics">Racing Basics</a></li>
+              <li><a href="/RacerInfo#OutSideTrackLineUp">Track Line Up</a></li>
+              <li><a href="/RacerInfo#Tech.Inspection">Tech. Inspection</a></li> 
+              <li><a href="/RacerInfo#TheTrack">The Track</a></li> 
+              <li><a href="/RacerInfo#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
+              <li><a href="/RacerInfo#Disqualifications">Disqualifications</a></li> 
+              <li><a href="/RacerInfo#Tree">Tree</a></li>
             </ul>
           </li>
           <li><a href="/Points.html">Points</a></li>
-          <li class="dropdown"><a href="/Events.html">Events <span class="caret"></span></a>
+          <li class="dropdown"><a href="/Events">Events <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/Events.html#RaceSchedule">Race Schedule</a></li>
-              <li><a href="/Events.html#Posters">Posters</a></li>
+              <li><a href="/Events#RaceSchedule">Race Schedule</a></li>
+              <li><a href="/Events#Posters">Posters</a></li>
             </ul>
           </li>
           <li class="dropdown active"><a href="/Sponsors.html">Sponsors <span class="caret"></span></a>
@@ -113,22 +113,22 @@
               <li><a href="/Sponsors.html#SponsorshipInformation">Sponsorship Info.</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="/ContactUs.html">Contact Us <span class="caret"></span></a>
+          <li class="dropdown"><a href="/ContactUs">Contact Us <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/ContactUs.html">Contact Us</a></li>
-              <li><a href="/ContactUs.html#links">Other Tracks and Clubs</a></li>
+              <li><a href="/ContactUs">Contact Us</a></li>
+              <li><a href="/ContactUs#links">Other Tracks and Clubs</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="/AboutUs.html">About Us <span class="caret"></span></a>
+          <li class="dropdown"><a href="/AboutUs">About Us <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/AboutUs.html">About Us</a></li>
-              <li><a href="/AboutUs.html#LOCATEDAT">Location</a></li>
+              <li><a href="/AboutUs">About Us</a></li>
+              <li><a href="/AboutUs#LOCATEDAT">Location</a></li>
             </ul>
           </li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
-              <li><a href="/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
+              <li><a href="/SISLRA/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
+              <li><a href="/SISLRA/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
             </ul>
           </li>
         </ul>
@@ -187,13 +187,13 @@
     </tr>
     <tr>
       <td>
-        <a href="http://bdlifttruck.ca/" target="_blank"><img id="BandDForklift" src="/Sponsors/BandDForklift-300x87.jpg" alt="TowerLaneSponsor" width="300" height="150" /></a>
+        <a href="http://bdlifttruck.ca/" target="_blank"><img id="BandDForklift" src="/SISLRA/YearSponsors/BandDForklift-300x87.jpg" alt="TowerLaneSponsor" width="300" height="150" /></a>
       </td>
         <td>
           <img src="/SISLRA/ChristmasTree.png" alt="Christmas Tree" width="200" style="margin-left:50px; margin-right:50px;" />
         </td>
       <td>
-        <a href="http://searlesauto.ca/" target="_blank"><img id="Searles" src="/Sponsors/Searles.jpg" alt="PitLaneSponsor" width="380" /></a>
+        <a href="http://searlesauto.ca/" target="_blank"><img id="Searles" src="/SISLRA/YearSponsors/Searles.jpg" alt="PitLaneSponsor" width="380" /></a>
       </td>
     </tr>
     <tr>
@@ -216,46 +216,46 @@
 
   <h1>Supporting Sponsors:</h1>
   
-  <a href="http://www.382sign.com/" target="_blank"><img id="GraphicFX" src="/Sponsors/GraphicFX.png" alt="Graphic FX" width="400" /></a>
+  <a href="http://www.382sign.com/" target="_blank"><img id="GraphicFX" src="/SISLRA/YearSponsors/GraphicFX.png" alt="Graphic FX" width="400" /></a>
   <p>Thanks goes out to Graphic FX Signworks for our Tower Schedule sign. Graphic FX specializes in professional and affordable
     vehicle graphics, business signage and digital printing services.  From start to finish they can design any sized job through
     computer designed proofs and customer interaction.  Quality is important to them.  All their services are manufactured in-house,
     providing you with a durable warranted product at a competitive price. Visit them at <a href="http://www.382sign.com/" target="_blank">www.382sign.com</a></p>
   
-  <a href="http://www.dentexpdr.com/" target="_blank"><img id="Dentex" src="/Sponsors/DentexNoBack.png" alt="Dentex" width="280" height="90" /></a>
+  <a href="http://www.dentexpdr.com/" target="_blank"><img id="Dentex" src="/SISLRA/YearSponsors/DentexNoBack.png" alt="Dentex" width="280" height="90" /></a>
   <p>Dentex Paintless Dent Removal Ltd. is a locally owned Canadian company that takes pride in their workmanship and enjoys making your vehicle look new again.
     As Victoria's leader in paintless dent removal, Dentex has built a reputation for excellence over the past 2 decades while providing precision service to
     car dealers, bodyshops and individuals.  Using the innovative PDR process, which does not involve paint or body fillers, they make dents and dings disappear
     with fast affordable and environmentally friendly methods.  Check them out at <a href="http://www.dentexpdr.com/" target="_blank">dentexpdr.com</a></p>
   
-  <a href="http://www.lordco.com/" target="_blank"><img id="Lordco" src="/Sponsors/Lordco.png" alt="Lordco" width="300" /></a>
+  <a href="http://www.lordco.com/" target="_blank"><img id="Lordco" src="/SISLRA/YearSponsors/Lordco.png" alt="Lordco" width="300" /></a>
   <p>With over 100 locations across BC, Lordco is the largest distributor and retailer of automotive parts and accessories. 
     Lordco stocks a complete line of auto body supplies, high performance parts and accessories, industrial and welding supplies,
     and a complete line of garage equipment and professional tools.  As Lordco strives to provide their valued customers with the
     highest level of service possible, visit them for your automotive needs. Visit them at <a href="http://www.lordco.com/" target="_blank">www.lordco.com</a></p>
   
-  <a href="http://www.used.ca/" target="_blank"><img id='Used.ca' src="/Sponsors/Used_Logo_Purple.png" alt="Used_Logo_Purple" width="300" /></a>
+  <a href="http://www.used.ca/" target="_blank"><img id='Used.ca' src="/SISLRA/YearSponsors/Used_Logo_Purple.png" alt="Used_Logo_Purple" width="300" /></a>
   <p>Canadian-owned and operated, Used.ca connects communities to the sharing economy in a fun, safe and family-friendly way. Founded in 2003 through
   a desire to reduce the amount of discarded, but still useful, items that were reaching landfills, Used.ca encourages users to #ThinkUsedFirst.
   Used.ca is dedicated to supporting local communities through the <a href="http://www.used.ca/community/usedhelps/" target="_blank">#UsedHelps</a> initiative. Users can donate the proceeds of their sales directly to participating registered Canadian charities.
   For more information, please visit: <a href="http://www.used.ca/" target="_blank">www.Used.ca</a>.</p>
   
-  <a href="http://westbaymechanical.com/" target="_blank"><img id="WestBayMechanical" src="/Sponsors/WestBayMechanical.png" alt="WestBayMechanical" width="250" /></a>
+  <a href="http://westbaymechanical.com/" target="_blank"><img id="WestBayMechanical" src="/SISLRA/YearSponsors/WestBayMechanical.png" alt="WestBayMechanical" width="250" /></a>
   <p>West Bay Mechanical Ltd. From heat pumps to thermostats to boilers and more, explore the many products they sell and install in Residential settings. 
     They also meet Commercial needs and serve a wide variety of commercial, industrial and municipal clients on design builds and more. 
     Their service technicians offer decades of combined experience with a service department second to none in the region. Trusted for Quality, Reliability
     & Service for more than 40 years, choose West Bay Mechanical. <a href="http://westbaymechanical.com/" target="_blank">westbaymechanical.com</a></p>
   
-  <a href="http://islandtorque.com/" target="_blank"><img id="IslandTorque" src="/Sponsors/IslandTorqueConverter.png" alt="IslandTorque" width="240" /></a>
+  <a href="http://islandtorque.com/" target="_blank"><img id="IslandTorque" src="/SISLRA/YearSponsors/IslandTorqueConverter.png" alt="IslandTorque" width="240" /></a>
   <p>Island Torque Converter and Drive Shaft Ltd is an automotive machine shop that specialises in repairing and manufacturing drive shafts and torque converters.
     They also machine flywheels, drums and rotors, and provide welding shop services. For a detailed list of their services visit 
     <a href="http://islandtorque.com/" target="_blank">islandtorque.com</a></p>
 
-  <a href="http://mamillerspub.com/" target="_blank"><img id="MaMillersPub" src="/Sponsors/MaMillersPub.png" alt="MaMillersPub" width="250" /></a>
+  <a href="http://mamillerspub.com/" target="_blank"><img id="MaMillersPub" src="/SISLRA/YearSponsors/MaMillersPub.png" alt="MaMillersPub" width="250" /></a>
   <p>Ma Millers Pub welcomes you to join them for fresh menu items and a selection of domestic and craft beers on tap! Nestled in Langford between Sooke and Victoria,
     along the picturesque Goldstream Park you'll be glad you stopped in! Check out their menu at <a href="http://mamillerspub.com/" target="_blank">MaMillersPub.com</a></p>
   
-  <a href="https://www.hsminsurance.com/" target="_blank"><img id="HenrdrySwinton" src="/Sponsors/HenrdrySwinton.jpg" alt="Henrdry Swinton"  width="260" /></a>
+  <a href="https://www.hsminsurance.com/" target="_blank"><img id="HenrdrySwinton" src="/SISLRA/YearSponsors/HenrdrySwinton.jpg" alt="Henrdry Swinton"  width="260" /></a>
   <p>Hendry, Swinton & McKenzie Insurance Service Inc. has been locally owned and operated in Victoria since 1983.  Specializing in commercial and home insurance products, 
     HSM provides you access to Canada's best and most competitively priced insurance markets. They pride themselves in being able to assess an individual's or company's
     risk profile and tailoring an insurance solution to best mitigate it. Hendry Swinton McKenzie Insurance; see Vikki and choose locally owned for your home and commercial
