--- a/src/footerSocial.html
+++ b/src/footerSocial.html
@@ -17,9 +17,9 @@
           <li><a href="/Sponsors.html">Sponsors</a></li>
         </ul>
         <ul>
-          <li><a href="/ContactUs.html">Contact Us</a></li>
+          <li><a href="/ContactUs">Contact Us</a></li>
           <li> | </li>
-          <li><a href="/AboutUs.html">About Us</a></li>
+          <li><a href="/AboutUs">About Us</a></li>
         </ul>
       </div>
     </div>
