--- a/src/RacerInfo.html
+++ b/src/RacerInfo.html
@@ -50,7 +50,7 @@
     <table id="tableHeader">
       <tr>
         <td>
-          <h3><a href="/Events.html#RaceSchedule"><span class="sislraDate"></span></a></h3>
+          <h3><a href="/Events#RaceSchedule"><span class="sislraDate"></span></a></h3>
         </td>
         <td>
           <h3><a href="http://www.northislandtimingassociation.com/" target="_blank"><span class="RumbleOnTheRunwayDate"></span></a></h3>
@@ -76,26 +76,26 @@
       <div class="container-fluid">
         <ul class="nav navbar-nav">
           <li><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
-          <li class="dropdown active"><a href="/RacerInfo.html">Racer Info <span class="caret"></span></a>
+          <li class="dropdown active"><a href="/RacerInfo">Racer Info <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/RacerInfo.html#Fees">Fees</a></li>
-              <li><a href="/RacerInfo.html#Memberships">Memberships</a></li>
-              <li><a href="/RacerInfo.html#DriverInformationSheet">Driver Information Sheet</a></li>
-              <li><a href="/RacerInfo.html#RaceClassesAndTimes">Classes & Times</a></li>
-              <li><a href="/RacerInfo.html#BracketRacingBasics">Racing Basics</a></li>
-              <li><a href="/RacerInfo.html#OutSideTrackLineUp">Track Line Up</a></li>
-              <li><a href="/RacerInfo.html#Tech.Inspection">Tech. Inspection</a></li> 
-              <li><a href="/RacerInfo.html#TheTrack">The Track</a></li> 
-              <li><a href="/RacerInfo.html#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
-              <li><a href="/RacerInfo.html#Disqualifications">Disqualifications</a></li> 
-              <li><a href="/RacerInfo.html#Tree">Tree</a></li>
+              <li><a href="/RacerInfo#Fees">Fees</a></li>
+              <li><a href="/RacerInfo#Memberships">Memberships</a></li>
+              <li><a href="/RacerInfo#DriverInformationSheet">Driver Information Sheet</a></li>
+              <li><a href="/RacerInfo#RaceClassesAndTimes">Classes & Times</a></li>
+              <li><a href="/RacerInfo#BracketRacingBasics">Racing Basics</a></li>
+              <li><a href="/RacerInfo#OutSideTrackLineUp">Track Line Up</a></li>
+              <li><a href="/RacerInfo#Tech.Inspection">Tech. Inspection</a></li> 
+              <li><a href="/RacerInfo#TheTrack">The Track</a></li> 
+              <li><a href="/RacerInfo#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
+              <li><a href="/RacerInfo#Disqualifications">Disqualifications</a></li> 
+              <li><a href="/RacerInfo#Tree">Tree</a></li>
             </ul>
           </li>
           <li><a href="/Points.html">Points</a></li>
-          <li class="dropdown"><a href="/Events.html">Events <span class="caret"></span></a>
+          <li class="dropdown"><a href="/Events">Events <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/Events.html#RaceSchedule">Race Schedule</a></li>
-              <li><a href="/Events.html#Posters">Posters</a></li>
+              <li><a href="/Events#RaceSchedule">Race Schedule</a></li>
+              <li><a href="/Events#Posters">Posters</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="/Sponsors.html">Sponsors <span class="caret"></span></a>
@@ -113,22 +113,22 @@
               <li><a href="/Sponsors.html#SponsorshipInformation">Sponsorship Info.</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="/ContactUs.html">Contact Us <span class="caret"></span></a>
+          <li class="dropdown"><a href="/ContactUs">Contact Us <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/ContactUs.html">Contact Us</a></li>
-              <li><a href="/ContactUs.html#links">Other Tracks and Clubs</a></li>
+              <li><a href="/ContactUs">Contact Us</a></li>
+              <li><a href="/ContactUs#links">Other Tracks and Clubs</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="/AboutUs.html">About Us <span class="caret"></span></a>
+          <li class="dropdown"><a href="/AboutUs">About Us <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/AboutUs.html">About Us</a></li>
-              <li><a href="/AboutUs.html#LOCATEDAT">Location</a></li>
+              <li><a href="/AboutUs">About Us</a></li>
+              <li><a href="/AboutUs#LOCATEDAT">Location</a></li>
             </ul>
           </li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
-              <li><a href="/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
+              <li><a href="/SISLRA/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
+              <li><a href="/SISLRA/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
             </ul>
           </li>
         </ul>
@@ -169,7 +169,7 @@
           <li><a href="#Qualifying&Eliminations">Qualifying & Eliminations</a></li>
           <li><a href="#Disqualifications">Disqualification</a></li>
           <li><a href="#Tree">Tree</a></li>
-          <li>Also available in <a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> PDF</a></li>
+          <li>Also available in <a href="/SISLRA/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> PDF</a></li>
         </ul>
       </div>
     </div>
@@ -194,7 +194,7 @@
         </td>
       </tr>
       <tr>
-        <td colspan="3"><p> Non-members add $5.00 Interested in becoming a <a href="/RacerInfo.html#Memberships">member?</a> Detials below.<br />
+        <td colspan="3"><p> Non-members add $5.00 Interested in becoming a <a href="/RacerInfo#Memberships">member?</a> Detials below.<br />
                   Please note that you must be a paid member to participate in the season's<br />
                   points standings competition.</p>
         </td>
@@ -219,8 +219,8 @@
       </tr>
       <tr>
         <td colspan="3">
-          <p>Individual <a href="/RacerInfo.html#Memberships">memberships</a> fees are $30.00<br>
-            Family <a href="/RacerInfo.html#Memberships">membership</a> fees are $60.00 (includes two adults and two children under 16)<br />
+          <p>Individual <a href="/RacerInfo#Memberships">memberships</a> fees are $30.00<br>
+            Family <a href="/RacerInfo#Memberships">membership</a> fees are $60.00 (includes two adults and two children under 16)<br />
             and run from April 1st to March 31st annually. </p>
         </td>
       </tr>
@@ -241,7 +241,7 @@
     <h1 id="DriverInformationSheet">Driver Information Sheet</h1>
     <p>Drivers, we ask that you please to print and complete the Driver Information Sheet so that the tower computers 
             can be up to date. Once completed bring it to race day or at a club meeting.</p>
-      <a id="DriverInfoPDF" href="/RacersInfo/DriverInformationSlip.pdf" target="_blank" class="btn btn-link" role="button"><span class="filetypes filetypes-pdf x2"></span><br> Driver Information Sheet/New Racers Sheet</a>
+      <a id="DriverInfoPDF" href="/SISLRA/RacersInfo/DriverInformationSlip.pdf" target="_blank" class="btn btn-link" role="button"><span class="filetypes filetypes-pdf x2"></span><br> Driver Information Sheet/New Racers Sheet</a>
 
     <br>
     <br>
@@ -306,7 +306,7 @@
     </div>
 
     <h1 id="TheTrack">THE TRACK</h1>
-    <img src="/RacersInfo/TheTrack.png" alt="The Track" width="550" height="400" />
+    <img src="/SISLRA/RacersInfo/TheTrack.png" alt="The Track" width="550" height="400" />
     <br>
     <table>
       <tr>
@@ -423,7 +423,7 @@
     <br>
     
     <h1 id="Tree">Tree</h1>
-    <img src="/RacersInfo/Tree.png" alt="Tree" width="530" />
+    <img src="/SISLRA/RacersInfo/Tree.png" alt="Tree" width="530" />
     <p style="text-align: left;"><strong>FULL TREE:</strong> Used in Competition, Stock, and Super Stock, for which a handicap starting system is
       used to equalize competition. The three amber bulbs on the Christmas Tree flash consecutively fivetenths
       of a second apart, followed five-tenths later by the green starting light. A perfect reaction time
