--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 <head>
 
   <title>SISLRA</title>
-  <link rel="icon" href="/Favicon/16ChristmasTree.ico">
+  <link rel="icon" href="/SISLRA/Favicon/16ChristmasTree.ico">
 
   <!-- CSS -->
   <link rel="stylesheet" href="/Bootstrap/css/bootstrap.css">
@@ -74,7 +74,7 @@
     <table id="indexTableHeader">
       <tr>
         <td>
-          <h3><a href="/Events.html#RaceSchedule"><span class="sislraDate"></span></a></h3>
+          <h3><a href="/Events#RaceSchedule"><span class="sislraDate"></span></a></h3>
         </td>
         <td>
           <h3><a href="http://www.northislandtimingassociation.com/" target="_blank"><span class="RumbleOnTheRunwayDate"></span></a></h3>
@@ -100,26 +100,26 @@
       <div class="container-fluid">
         <ul class="nav navbar-nav">
           <li class="active"><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
-          <li class="dropdown"><a href="/RacerInfo.html">Racer Info <span class="caret"></span></a>
+          <li class="dropdown"><a href="/RacerInfo">Racer Info <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/RacerInfo.html#Fees">Fees</a></li>
-              <li><a href="/RacerInfo.html#Memberships">Memberships</a></li>
-              <li><a href="/RacerInfo.html#DriverInformationSheet">Driver Information Sheet</a></li>
-              <li><a href="/RacerInfo.html#RaceClassesAndTimes">Classes & Times</a></li>
-              <li><a href="/RacerInfo.html#BracketRacingBasics">Racing Basics</a></li>
-              <li><a href="/RacerInfo.html#OutSideTrackLineUp">Track Line Up</a></li>
-              <li><a href="/RacerInfo.html#Tech.Inspection">Tech. Inspection</a></li> 
-              <li><a href="/RacerInfo.html#TheTrack">The Track</a></li> 
-              <li><a href="/RacerInfo.html#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
-              <li><a href="/RacerInfo.html#Disqualifications">Disqualifications</a></li> 
-              <li><a href="/RacerInfo.html#Tree">Tree</a></li>
+              <li><a href="/RacerInfo#Fees">Fees</a></li>
+              <li><a href="/RacerInfo#Memberships">Memberships</a></li>
+              <li><a href="/RacerInfo#DriverInformationSheet">Driver Information Sheet</a></li>
+              <li><a href="/RacerInfo#RaceClassesAndTimes">Classes & Times</a></li>
+              <li><a href="/RacerInfo#BracketRacingBasics">Racing Basics</a></li>
+              <li><a href="/RacerInfo#OutSideTrackLineUp">Track Line Up</a></li>
+              <li><a href="/RacerInfo#Tech.Inspection">Tech. Inspection</a></li> 
+              <li><a href="/RacerInfo#TheTrack">The Track</a></li> 
+              <li><a href="/RacerInfo#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
+              <li><a href="/RacerInfo#Disqualifications">Disqualifications</a></li> 
+              <li><a href="/RacerInfo#Tree">Tree</a></li>
             </ul>
           </li>
           <li><a href="/Points.html">Points</a></li>
-          <li class="dropdown"><a href="/Events.html">Events <span class="caret"></span></a>
+          <li class="dropdown"><a href="/Events">Events <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/Events.html#RaceSchedule">Race Schedule</a></li>
-              <li><a href="/Events.html#Posters">Posters</a></li>
+              <li><a href="/Events#RaceSchedule">Race Schedule</a></li>
+              <li><a href="/Events#Posters">Posters</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="/Sponsors.html">Sponsors <span class="caret"></span></a>
@@ -137,22 +137,22 @@
               <li><a href="/Sponsors.html#SponsorshipInformation">Sponsorship Info.</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="/ContactUs.html">Contact Us <span class="caret"></span></a>
+          <li class="dropdown"><a href="/ContactUs">Contact Us <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/ContactUs.html">Contact Us</a></li>
-              <li><a href="/ContactUs.html#links">Other Tracks and Clubs</a></li>
+              <li><a href="/ContactUs">Contact Us</a></li>
+              <li><a href="/ContactUs#links">Other Tracks and Clubs</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="/AboutUs.html">About Us <span class="caret"></span></a>
+          <li class="dropdown"><a href="/AboutUs">About Us <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/AboutUs.html">About Us</a></li>
-              <li><a href="/AboutUs.html#LOCATEDAT">Location</a></li>
+              <li><a href="/AboutUs">About Us</a></li>
+              <li><a href="/AboutUs#LOCATEDAT">Location</a></li>
             </ul>
           </li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
-              <li><a href="/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
+              <li><a href="/SISLRA/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
+              <li><a href="/SISLRA/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
             </ul>
           </li>
         </ul>
@@ -170,10 +170,10 @@
   <div id="main-section">
 
   <div id="left">
-    <h3><a href="/Points.html"><span class="glyphicons glyphicons-coins"></span>Points: <span id="PointsUpdate"></span></a></h3>
+    <h3><a href="/Points"><span class="glyphicons glyphicons-coins"></span>Points: <span id="PointsUpdate"></span></a></h3>
     <!-- <p id="indexPointsUpdate">Updated as of: <span id="PointsUpdate"></span></p> -->
 
-    <h3><a href="/Events.html#RaceSchedule"><span class="glyphicons glyphicons-calendar"></span>2017 Schedule:</a></h3>
+    <h3><a href="/Events#RaceSchedule"><span class="glyphicons glyphicons-calendar"></span>2017 Schedule:</a></h3>
 <!--      <ul id="schedule">
       <li id="1stRace">Apr 23 -Points -Cars, Bikes & Students</li>
       <li id="2ndRace">Apr 30 -Points -Cars, Bikes & Students</li>
@@ -201,8 +201,8 @@
       <p style="margin-left: 0px;"  id="10thRace">Sept 10 - Points - Cars & Bikes</p>
       <p style="margin-left: 30px;" id="11thRace">17 - Championship Race - Cars & Bikes</p>
     </div>
-    <h3><a href="/RacerInfo.html#Fees"><span class="glyphicons glyphicons-money"></span>Fees</a></h3>
-    <h3><a href="/AboutUs.html#LOCATEDAT"><span class="glyphicons glyphicons-map-marker"></span>Location</a></h3>
+    <h3><a href="/RacerInfo#Fees"><span class="glyphicons glyphicons-money"></span>Fees</a></h3>
+    <h3><a href="/AboutUs#LOCATEDAT"><span class="glyphicons glyphicons-map-marker"></span>Location</a></h3>
     <h3><a href="/Sponsors.html"><span class="glyphicons glyphicons-group"></span>Sponsors</a></h3>
 
     <h3 style="margin-left:3px;"><a href="/Sponsors.html#SponsorshipInformation">Interested in being a sponsor?</a></h3>
@@ -294,8 +294,8 @@
     <!-- <h1><a href="http://www.used.ca/" target="_blank">Welcome Used.ca</a></h1> -->
     <!-- <p>Thank you to <a href="http://www.used.ca/" target="_blank">Used.ca</a> for signing on as a 2017 sponsor.</p>   -->
     
-    <h1><a href="/Events.html#RaceSchedule">It's Almost Here!</a></h1>
-    <p>The <a href="/Events.html#RaceSchedule">first race</a> of the season is almost here! Watch as we count down to our <a href="/Events.html#RaceSchedule">first race!</a></p>
+    <h1><a href="/Events#RaceSchedule">It's Almost Here!</a></h1>
+    <p>The <a href="/Events#RaceSchedule">first race</a> of the season is almost here! Watch as we count down to our <a href="/Events#RaceSchedule">first race!</a></p>
     
     <!-- <h1>Sponsorship Coordinator</h1> -->
     <!-- <p>Thank you very much to Rob Baxter for taking on the position of Sponsorship Coordinator.</p> -->
@@ -303,11 +303,11 @@
     <h1>No Sound Restrictions</h1>
     <p>A reminder that there are no decibel restrictions at our track so feel free to make some noise!</p>
 
-    <h1><a href="/RacerInfo.html#RaceClassesAndTimes">Class Times</a></h1>
+    <h1><a href="/RacerInfo#RaceClassesAndTimes">Class Times</a></h1>
     <p>A reminder that all cars in Pro Class now run 5.79 or faster, and all Street cars run 5.80 or slower.</p>
 
-    <h1><a href="/RacerInfo.html#Memberships">Memberships Have Their Rewards</a></h1>
-    <p>Help support our club and purchase <a href="/RacerInfo.html#Memberships">membership.</a></p>
+    <h1><a href="/RacerInfo#Memberships">Memberships Have Their Rewards</a></h1>
+    <p>Help support our club and purchase <a href="/RacerInfo#Memberships">membership.</a></p>
 
     </div> <!-- end of center -->
 
